--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name: chat
-  host: <I/D/C numbers>-chat
+  host: OpenSAP-chat
   path: .
   memory: 128M
   buildpack: nodejs_buildpack
